io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegalnative/C.java
package io.hotmoka.tests.errors.illegalnative;

public class C {
	public native void foo();
}